--- a/app/public/ui/css/gray/main.css
+++ b/app/public/ui/css/gray/main.css
@@ -26,7 +26,7 @@ body {
 	background: #fff;
 	border: 1px solid #939292;
 	z-index: 10000;
-	left: 100px;
+	padding: 10px;
 }
 
 
@@ -82,4 +82,89 @@ body {
 }
 .arrow_box.left:before {
 	border-right-color: #939292; top: 50%; margin-top: -15px;
+}
+
+.arrow_box .title {
+	height: 20px;
+	position: relative;
+}
+
+.iconBtn {
+	height: 15px;
+	cursor: pointer;
+	padding-left: 15px;
+	width: 4px;
+}
+
+.closeBtn {
+	background: url("/ui/img/icons/grayIcons.png") no-repeat scroll -31px -193px transparent;
+	margin: 0 10px;
+	position: absolute;
+	right: 0;
+}
+
+
+.button.blue {
+    color: #fff;
+    border: 2px solid #DEDFE0;
+    background: #0C64A8;
+    background: -webkit-gradient(linear, left top, left bottom, from(#62A9E0), to(#0C64A8));
+    background: -moz-linear-gradient(top,   #62A9E0, #0C64A8);
+}
+.button.blue:hover {
+    background: #007ead;
+    background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+    background: -moz-linear-gradient(top,  #0095cc,  #00678e);
+}
+.button.blue:active {
+    color: #80bed6;
+    background: -webkit-gradient(linear, left top, left bottom, from(#0078a5), to(#00adee));
+    background: -moz-linear-gradient(top,  #0078a5,  #00adee);
+}
+
+.button {
+    display: inline-block;
+    zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
+    *display: inline;
+    vertical-align: baseline;
+    margin: 0 2px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font: 12px Arial, Helvetica, sans-serif;
+    padding: .5em 2em .55em;
+    text-shadow: 0 1px 1px rgba(0,0,0,.3);
+    -webkit-border-radius: 18px; 
+    -moz-border-radius: 18px;
+    border-radius: 18px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+    box-shadow: 0 1px 2px rgba(0,0,0,.2);
+    font-weight: normal;
+}
+
+@-moz-document url-prefix() { .button { font-weight: bold; } }
+
+.button.disable,.button.disable:hover {
+    background: #8B8E91;
+}
+
+.button:hover {
+    text-decoration: none;
+}
+
+.button:active {
+    position: relative;
+    top: 1px;
+}
+
+.button.normal {
+    font-size: 11px;
+    padding: 4.5px 12px;
+}
+
+.button.small {
+    font-size: 11px;
+    padding: 3.5px 12px;
 }
