--- a/app/public/ui/css/gray/main.css
+++ b/app/public/ui/css/gray/main.css
@@ -168,3 +168,82 @@ body {
     font-size: 11px;
     padding: 3.5px 12px;
 }
+
+.loadDiv2 {
+	background: url("/ui/img/icons/ajaxLoader2.gif") no-repeat;
+	position: absolute;
+	top: 43%;
+	left: 47%;
+	height: 16px;
+	width: 16px;
+}
+
+.panelBg1 {
+	background: #E0DEDE;
+}
+
+.alphaDarkMask {
+    background-color: black;
+    height: 100%;
+   	filter: Alpha(Opacity = 70);
+	opacity: 0.7;
+	-moz-opacity: 0.7;
+    position: fixed;
+    width: 100%;
+    z-index: 1001;
+}
+
+.alphaWhiteMask{
+	 background-color: white;
+	 opacity: 0.5;
+	-moz-opacity: 0.5;
+}
+
+.whiteMask{
+	 background-color: white;
+	 opacity: 1;
+	-moz-opacity: 1;
+}
+
+.popupBox{
+	background-color: #FFFFFF;
+	border:1px solid #c8c8c8;
+    position: absolute;
+    z-index: 1002;
+	left: 37%;
+    top: 43%;
+    width: 400px;
+}
+
+.popupBox .body {
+	position: relative;
+}
+
+.popupBox .title {
+    background: none repeat scroll 0 0 #EDEDED;
+    font-weight: bold;
+    height: 22px;
+    line-height: 22px;
+    padding-left: 10px;
+}
+
+.popupBox .container {
+    cursor: default;
+    padding: 15px;
+    position: relative;
+}
+
+.buttonsPanel {
+	margin-top: 10px;
+	text-align: center; 
+}
+
+.ajaxLoadingLayout {
+	background: #fff;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+	z-index: 1003;
+}
