--- a/app/viewTmp/cms_modules_views/pageBoard/vpageBuild.jade
+++ b/app/viewTmp/cms_modules_views/pageBoard/vpageBuild.jade
@@ -5,6 +5,7 @@ html(lang="en")
 		#vpageShapeBox(hidden)
 		#topBar
 			.leftBox
+				li(id="createGroup",class="tabBtn") Group
 			.rightBox
 				ol
 					select(id="vSiteSwitcher")
