--- a/app/public/cms_modules_public/pageBoard/css/main.css
+++ b/app/public/cms_modules_public/pageBoard/css/main.css
@@ -72,6 +72,14 @@
 	left: 10px;
 }
 
+#topBar .leftBox li {
+	float: left;
+	width: 100px;
+	margin-top: 2px;
+	box-shadow: 2px 1px 2px rgba(0,0,0,.5);
+	cursor: move; 
+}
+
 #topBar .rightBox {
 	position: absolute;
 	right: 10px;
@@ -102,4 +110,15 @@
 	text-decoration: none;
 	cursor: pointer;
 	font-weight: bold;
+}
+
+.vsiteOpBtns {
+	position: relative;
+	width: 40px;
+	top: -7px;
+}
+
+#createVSite {
+	text-decoration: underline;
+	cursor: pointer;
 }
