--- a/app/public/ui/css/gray/main.css
+++ b/app/public/ui/css/gray/main.css
@@ -247,3 +247,22 @@ body {
 	top: 0px;
 	z-index: 1003;
 }
+
+.tabBtn {
+	background: #9B9898;
+    background: -webkit-gradient(linear, left top, left bottom, from#D8D6D6), to(#A8A6A6));
+    background: -moz-linear-gradient(top,  #D8D6D6,  #A8A6A6);
+    text-align: center;
+    border: 1px solid #BABABA;
+    border-radius: 4px;
+    color: #fff;
+    height: 22px;
+    line-height: 22px;
+    text-shadow:1px -1px 8px #ffffff;
+}
+
+.tabBtn:hover {
+    background: #007ead;
+    background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+    background: -moz-linear-gradient(top,  #0095cc,  #00678e);
+}
