--- a/app/public/cms_modules_public/callQueue/css/main.css
+++ b/app/public/cms_modules_public/callQueue/css/main.css
@@ -54,13 +54,18 @@
 .agentItem {
 	padding-left: 8px;
 	width: 150px;
-	height: 50px;
+	height: 53px;
 	float: left;
 	margin: 10px 0 0 10px;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .agentItem dt {
-	margin-top: 2px;
+	margin-top: 3px;
+}
+
+.agentItem.hasHubs{
+	height: 72px;
 }
 
 #mainBox .header {
@@ -92,4 +97,20 @@
 #popupAddAgent {
 	position: relative;
 	top: -2px;
+}
+
+.ownHubs {
+	width: 20px;
+	padding-left: 14px;
+	margin-right: 2px;
+}
+
+.inputFilter {
+	color: #A8A7A6;
+	font-style: italic;
+}
+
+.inputFilter.onFocus {
+	color: #000000;
+	font-style: normal;
 }
